--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,9 @@
-
-
 PyPDF2==3.0.1
 cohere==5.11.1
 openpyxl==3.1.5
 python-dotenv==1.0.1
 python-docx==1.1.2
-streamlit
-openai
-reportlab
-setuptools
-python3-distutils
-
-
-
-
+streamlit==1.40.0
+openai==1.54.3
+reportlab==4.2.5
+setuptools>=75.3.0
